# openap-polymer

./: README.md  pyproject.toml
openap/polymer/: __init__.py
openap/polymer/data/: a19n.csv  a20n.csv  a21n.csv  a319.csv  a320.csv  a321.csv  a332.csv  a333.csv  a343.csv  a359.csv  a388.csv  b37m.csv  b38m.csv  b39m.csv  b3xm.csv  b734.csv  b737.csv  b738.csv  b739.csv  b744.csv  b748.csv  b752.csv  b763.csv  b772.csv  b773.csv  b77w.csv  b788.csv  b789.csv  c550.csv  e145.csv  e170.csv  e190.csv  e195.csv  e75l.csv  glf6.csv
openap/polymer/script/: construct.py
test/: test_all.py
